// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render row with date 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
        "minHeight": 54,
        "paddingVertical": 8,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "minWidth": 90,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingLeft": 16,
          },
          Object {
            "paddingRight": 16,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "paddingRight": 32,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Row with a date in it!
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "minWidth": 90,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {},
            ]
          }
        >
          --
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Render row with date and the clear button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
        "minHeight": 54,
        "paddingVertical": 8,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "minWidth": 90,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingLeft": 16,
          },
          Object {
            "paddingRight": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "paddingRight": 32,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Row with a date in it!
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "minWidth": 90,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {},
            ]
          }
        >
          --
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 16,
        "paddingTop": 8,
      }
    }
  >
    <View
      accessibilityLabel="Remove date"
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/Clear.png",
          }
        }
      />
    </View>
  </View>
</View>
`;
